--- a/Lanterna/App.xaml
+++ b/Lanterna/App.xaml
@@ -9,8 +9,8 @@
                 <Setter Property="FontFamily">
                     <Setter.Value>
                         <OnPlatform x:TypeArguments="x:String" 
-                            Android="Exo2-Bold.ttf#Exo2-Bold"
-                            iOS="Exo2-Bold.ttf"
+                            Android="Exo2-Bold.otf#Exo2-Bold"
+                            iOS="Exo2-Bold.otf"
                         />
                     </Setter.Value>
                 </Setter>
@@ -31,9 +31,9 @@
                 <Setter Property="FontSize" Value="24"/>
             </Style>
 
-            <Style x:Key="texo" TargetType="Label">
-                <Setter Property="HorizontalOptions" Value="60"/>
-                <Setter Property="VerticalOptions" Value="60"/>
+            <Style x:Key="texto" TargetType="Label">
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
                 <Setter Property="FontSize" Value="Medium"/>
             </Style>
 
