--- a/Lanterna/MainPage.xaml
+++ b/Lanterna/MainPage.xaml
@@ -33,7 +33,7 @@
                      HorizontalOptions="Center"
                      Aspect="AspectFill"
                      BackgroundColor="#232323"
-                     Clicked="btnOnOff_Clicked"/>
+                     Clicked="btnOnOff_ClickedAsync"/>
 
         <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                HorizontalOptions="Center"
@@ -44,9 +44,9 @@
         <Label Grid.Row="4" Grid.Column="0" Text="Status da Bateria" Style="{StaticResource textoCinza}"/>
         <Label Grid.Row="5" Grid.Column="0" Text="Fonte de Energia" Style="{StaticResource textoCinza}"/>
 
-        <Label Grid.Row="3" Grid.Column="0" x:Name="lbl_porcentagem_restante" Style="{StaticResource textoBranco}"/>
-        <Label Grid.Row="4" Grid.Column="0" x:Name="lbl_status" Style="{StaticResource textoBranco}"/>
-        <Label Grid.Row="5" Grid.Column="0" x:Name="lbl_fonte_carregamento" Style="{StaticResource textoBranco}"/>
+        <Label Grid.Row="3" Grid.Column="1" x:Name="lbl_porcentagem_restante" Style="{StaticResource textoBranco}"/>
+        <Label Grid.Row="4" Grid.Column="1" x:Name="lbl_status" Style="{StaticResource textoBranco}"/>
+        <Label Grid.Row="5" Grid.Column="1" x:Name="lbl_fonte_carregamento" Style="{StaticResource textoBranco}"/>
 
         <Label Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
                x:Name="lbl_bateria_fraca"
